Introduced LabelledStatement and removed label from Statement. Changed Statement from abstract class to marker interface.